--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <button id="contador" onclick="increaseCounter()">Clique para aumentar o contador</button>
   <p id="counter">Contador: <span id="count">0</span></p>
 
+  <button id="dentador" onclick="increaseCounter1()">Clique para diminuir o contador</button>
+
   <script src="script.js"></script>
 
 </body>
